# ColDet

./: CNAME  INFERENCE.py  README.md  index.html  infernce.ipynb
Inferencing with gradio/: app.py  requirements.txt
old-models/: note.md
pypi-package/: pyproject.toml
